--- a/notebooks/01_get_summary_data.qmd
+++ b/notebooks/01_get_summary_data.qmd
@@ -3,7 +3,7 @@ title: "Summary Data"
 author: "Jeremy Mikecz"
 format: html
 editor: visual
-jupyter: ir
+#jupyter: ir
 ---
 
 # Get Summary Data (Practice with preloaded datasets)
@@ -26,8 +26,6 @@ to view the available preloaded datasets, run the following cell:
 ```
 
 In this lesson we will work with the **Star Wars** dataset (`starwars`) that loads with the **dplyr** library (part of the tidyverse package).
-
-`{r} starwars}`
 
 To learn more about this dataset run:
 
@@ -73,7 +71,7 @@ xtabs(data=starwars, ~species + homeworld) |>
 ```
 
 ```{r}
-str(starwars)
+#str(starwars)
 ```
 
 ## 3. Retrieve Data
